# FixedPointDSP

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: FFTBenchmark.cpp
include/dsp/: concepts.hpp  convolution.hpp  dft.hpp  fft.hpp
include/fir/: fir_coefficients.hpp  fir_filter.hpp
include/fixed_point/: arithmetic_policies.hpp  fixed_point.hpp  promote.hpp
tests/: ConvolutionTests.cpp  DFTTests.cpp  FFTTests.cpp  FIRFilterTests.cpp  FixedPointTests.cpp
